[package]
name = "meaning-of-life"
version = "42.42.42"
edition = "2021"

license = "MIT"
description = "Helps you figure out the meaning of life."
homepage = "https://github.com/henry-lang/meaning-of-life"
documentation = "https://github.com/henry-lang/meaning-of-life"
repository = "https://github.com/henry-lang/meaning-of-life"
readme = "README.md"